parser.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */
(function(root) {
  "use strict";

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  peg$SyntaxError.buildMessage = function(expected, found) {
    var DESCRIBE_EXPECTATION_FNS = {
          literal: function(expectation) {
            return "\"" + literalEscape(expectation.text) + "\"";
          },

          "class": function(expectation) {
            var escapedParts = "",
                i;

            for (i = 0; i < expectation.parts.length; i++) {
              escapedParts += expectation.parts[i] instanceof Array
                ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
                : classEscape(expectation.parts[i]);
            }

            return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
          },

          any: function(expectation) {
            return "any character";
          },

          end: function(expectation) {
            return "end of input";
          },

          other: function(expectation) {
            return expectation.description;
          }
        };

    function hex(ch) {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/"/g,  '\\"')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function classEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/\]/g, '\\]')
        .replace(/\^/g, '\\^')
        .replace(/-/g,  '\\-')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      var descriptions = new Array(expected.length),
          i, j;

      for (i = 0; i < expected.length; i++) {
        descriptions[i] = describeExpectation(expected[i]);
      }

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  };

  function peg$parse(input, options) {
    options = options !== void 0 ? options : {};

    var peg$FAILED = {},

        peg$startRuleFunctions = { Text: peg$parseText, Expression: peg$parseExpression },
        peg$startRuleFunction  = peg$parseText,

        peg$c0 = /^[^{]/,
        peg$c1 = peg$classExpectation(["{"], true, false),
        peg$c2 = function(head, expression, tail) { return (head.length > 0 ? [head.join('')] : []).concat([expression], tail); },
        peg$c3 = peg$anyExpectation(),
        peg$c4 = function(text) { return text.length > 0 ? [text.join('')] : []; },
        peg$c5 = "{{{",
        peg$c6 = peg$literalExpectation("{{{", false),
        peg$c7 = "}}}",
        peg$c8 = peg$literalExpectation("}}}", false),
        peg$c9 = function(expression) { return { html: true, expression: expression }; },
        peg$c10 = "{{",
        peg$c11 = peg$literalExpectation("{{", false),
        peg$c12 = "}}",
        peg$c13 = peg$literalExpectation("}}", false),
        peg$c14 = function(expression) { return { html: false, expression: expression }; },
        peg$c15 = "=",
        peg$c16 = peg$literalExpectation("=", false),
        peg$c17 = "*=",
        peg$c18 = peg$literalExpectation("*=", false),
        peg$c19 = "/=",
        peg$c20 = peg$literalExpectation("/=", false),
        peg$c21 = "%=",
        peg$c22 = peg$literalExpectation("%=", false),
        peg$c23 = "+=",
        peg$c24 = peg$literalExpectation("+=", false),
        peg$c25 = "-=",
        peg$c26 = peg$literalExpectation("-=", false),
        peg$c27 = function(left, operator, right) { return { type: "Assignment", operator: operator, left: left, right: right }; },
        peg$c28 = "?",
        peg$c29 = peg$literalExpectation("?", false),
        peg$c30 = ":",
        peg$c31 = peg$literalExpectation(":", false),
        peg$c32 = function(test, consequent, alternate) { return { type: "Conditional", test: test, consequent: consequent, alternate: alternate }; },
        peg$c33 = "||",
        peg$c34 = peg$literalExpectation("||", false),
        peg$c35 = function(head, arg) { return { operator: '||', arg: arg }; },
        peg$c36 = function(head, tail) { return buildTree('Logical', head, tail); },
        peg$c37 = "&&",
        peg$c38 = peg$literalExpectation("&&", false),
        peg$c39 = function(head, arg) { return arg; },
        peg$c40 = "===",
        peg$c41 = peg$literalExpectation("===", false),
        peg$c42 = "!==",
        peg$c43 = peg$literalExpectation("!==", false),
        peg$c44 = "==",
        peg$c45 = peg$literalExpectation("==", false),
        peg$c46 = "!=",
        peg$c47 = peg$literalExpectation("!=", false),
        peg$c48 = function(head, operator, arg) { return { operator: operator, arg: arg }; },
        peg$c49 = function(head, tail) { return buildTree('Binary', head, tail); },
        peg$c50 = "<=",
        peg$c51 = peg$literalExpectation("<=", false),
        peg$c52 = ">=",
        peg$c53 = peg$literalExpectation(">=", false),
        peg$c54 = "<",
        peg$c55 = peg$literalExpectation("<", false),
        peg$c56 = ">",
        peg$c57 = peg$literalExpectation(">", false),
        peg$c58 = /^[+\-]/,
        peg$c59 = peg$classExpectation(["+", "-"], false, false),
        peg$c60 = /^[*\/%]/,
        peg$c61 = peg$classExpectation(["*", "/", "%"], false, false),
        peg$c62 = "++",
        peg$c63 = peg$literalExpectation("++", false),
        peg$c64 = "--",
        peg$c65 = peg$literalExpectation("--", false),
        peg$c66 = /^[+!\-]/,
        peg$c67 = peg$classExpectation(["+", "!", "-"], false, false),
        peg$c68 = function(operator, argument) {
              var type = (operator === "++" || operator === "--") ? "Update" : "Unary";
              return { type: type, operator: operator, argument: argument, prefix: true };
            },
        peg$c69 = function(argument, operator) { return { type: "Update", operator: operator, argument: argument, prefix: false }; },
        peg$c70 = function(callee, args) { return { type: "Call", callee: callee, arguments: args }; },
        peg$c71 = function(head, args) { return { type: "Call", arguments: args }; },
        peg$c72 = "[",
        peg$c73 = peg$literalExpectation("[", false),
        peg$c74 = "]",
        peg$c75 = peg$literalExpectation("]", false),
        peg$c76 = function(head, property) { return { type: "Member", property: property }; },
        peg$c77 = ".",
        peg$c78 = peg$literalExpectation(".", false),
        peg$c79 = function(head, property) { return { type: "Member", property: { type: 'Literal', value: property.name } }; },
        peg$c80 = function(head, tail) {
              return tail.reduce(function(result, element) {
                element[TYPES_TO_PROPERTY_NAMES[element.type]] = result;
                return element;
              }, head);
            },
        peg$c81 = function(head, property) { return { property: property }; },
        peg$c82 = function(head, property) { return { property: { type: 'Literal', value: property.name } }; },
        peg$c83 = function(head, tail) {
              return tail.reduce(function(result, element) {
                return { type: "Member", object: result, property: element.property };
              }, head);
            },
        peg$c84 = "(",
        peg$c85 = peg$literalExpectation("(", false),
        peg$c86 = ")",
        peg$c87 = peg$literalExpectation(")", false),
        peg$c88 = function() { return []; },
        peg$c89 = ",",
        peg$c90 = peg$literalExpectation(",", false),
        peg$c91 = function(head, tail) { return [head].concat(tail); },
        peg$c92 = peg$otherExpectation("identifier"),
        peg$c93 = /^[a-z$_]/i,
        peg$c94 = peg$classExpectation([["a", "z"], "$", "_"], false, true),
        peg$c95 = /^[a-z$_0-9]/i,
        peg$c96 = peg$classExpectation([["a", "z"], "$", "_", ["0", "9"]], false, true),
        peg$c97 = function(head, tail) { return { type: "Identifier", name: head + tail.join("") }; },
        peg$c98 = function() { return { type: "Array", elements: [] }; },
        peg$c99 = function(elements) { return { type: "Array", elements: elements }; },
        peg$c100 = function(head, element) { return element; },
        peg$c101 = "{",
        peg$c102 = peg$literalExpectation("{", false),
        peg$c103 = "}",
        peg$c104 = peg$literalExpectation("}", false),
        peg$c105 = function() { return { type: "Object", properties: [] }; },
        peg$c106 = function(properties) { return { type: "Object", properties: properties }; },
        peg$c107 = function(head, pa) { return pa; },
        peg$c108 = function(key, value) { return { type: "Property", key: key.name, value: value }; },
        peg$c109 = "null",
        peg$c110 = peg$literalExpectation("null", false),
        peg$c111 = function() { return { type: "Literal", value: null  }; },
        peg$c112 = "true",
        peg$c113 = peg$literalExpectation("true", false),
        peg$c114 = function() { return { type: "Literal", value: true  }; },
        peg$c115 = "false",
        peg$c116 = peg$literalExpectation("false", false),
        peg$c117 = function() { return { type: "Literal", value: false }; },
        peg$c118 = peg$otherExpectation("number"),
        peg$c119 = /^[0-9]/,
        peg$c120 = peg$classExpectation([["0", "9"]], false, false),
        peg$c121 = function() { return { type: "Literal", value: parseFloat(text()) }; },
        peg$c122 = "0",
        peg$c123 = peg$literalExpectation("0", false),
        peg$c124 = /^[1-9]/,
        peg$c125 = peg$classExpectation([["1", "9"]], false, false),
        peg$c126 = "e",
        peg$c127 = peg$literalExpectation("e", true),
        peg$c128 = peg$otherExpectation("string"),
        peg$c129 = "\"",
        peg$c130 = peg$literalExpectation("\"", false),
        peg$c131 = "\\\"",
        peg$c132 = peg$literalExpectation("\\\"", false),
        peg$c133 = function() { return '"'; },
        peg$c134 = /^[^"]/,
        peg$c135 = peg$classExpectation(["\""], true, false),
        peg$c136 = function(chars) { return { type: "Literal", value: chars.join("") }; },
        peg$c137 = "'",
        peg$c138 = peg$literalExpectation("'", false),
        peg$c139 = "\\'",
        peg$c140 = peg$literalExpectation("\\'", false),
        peg$c141 = function() { return "'"; },
        peg$c142 = /^[^'']/,
        peg$c143 = peg$classExpectation(["'", "'"], true, false),
        peg$c144 = peg$otherExpectation("whitespace"),
        peg$c145 = "\t",
        peg$c146 = peg$literalExpectation("\t", false),
        peg$c147 = " ",
        peg$c148 = peg$literalExpectation(" ", false),

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1 }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildStructuredError(
        [peg$otherExpectation(description)],
        input.substring(peg$savedPos, peg$currPos),
        location
      );
    }

    function error(message, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildSimpleError(message, location);
    }

    function peg$literalExpectation(text, ignoreCase) {
      return { type: "literal", text: text, ignoreCase: ignoreCase };
    }

    function peg$classExpectation(parts, inverted, ignoreCase) {
      return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
    }

    function peg$anyExpectation() {
      return { type: "any" };
    }

    function peg$endExpectation() {
      return { type: "end" };
    }

    function peg$otherExpectation(description) {
      return { type: "other", description: description };
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos], p;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column
        };

        while (p < pos) {
          if (input.charCodeAt(p) === 10) {
            details.line++;
            details.column = 1;
          } else {
            details.column++;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildSimpleError(message, location) {
      return new peg$SyntaxError(message, null, null, location);
    }

    function peg$buildStructuredError(expected, found, location) {
      return new peg$SyntaxError(
        peg$SyntaxError.buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parseText() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = [];
      if (peg$c0.test(input.charAt(peg$currPos))) {
        s2 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c1); }
      }
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        if (peg$c0.test(input.charAt(peg$currPos))) {
          s2 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c1); }
        }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseInlineExpression();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseText();
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c2(s1, s2, s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = [];
        if (input.length > peg$currPos) {
          s2 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c3); }
        }
        while (s2 !== peg$FAILED) {
          s1.push(s2);
          if (input.length > peg$currPos) {
            s2 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s2 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c3); }
          }
        }
        if (s1 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c4(s1);
        }
        s0 = s1;
      }

      return s0;
    }

    function peg$parseInlineExpression() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 3) === peg$c5) {
        s1 = peg$c5;
        peg$currPos += 3;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c6); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseExpression();
          if (s3 !== peg$FAILED) {
            s4 = peg$parse_();
            if (s4 !== peg$FAILED) {
              if (input.substr(peg$currPos, 3) === peg$c7) {
                s5 = peg$c7;
                peg$currPos += 3;
              } else {
                s5 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c8); }
              }
              if (s5 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c9(s3);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        if (input.substr(peg$currPos, 2) === peg$c10) {
          s1 = peg$c10;
          peg$currPos += 2;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c11); }
        }
        if (s1 !== peg$FAILED) {
          s2 = peg$parse_();
          if (s2 !== peg$FAILED) {
            s3 = peg$parseExpression();
            if (s3 !== peg$FAILED) {
              s4 = peg$parse_();
              if (s4 !== peg$FAILED) {
                if (input.substr(peg$currPos, 2) === peg$c12) {
                  s5 = peg$c12;
                  peg$currPos += 2;
                } else {
                  s5 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c13); }
                }
                if (s5 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$c14(s3);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      }

      return s0;
    }

    function peg$parseExpression() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      s1 = peg$parseLeftHandSideExpression();
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 61) {
            s3 = peg$c15;
            peg$currPos++;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c16); }
          }
          if (s3 === peg$FAILED) {
            if (input.substr(peg$currPos, 2) === peg$c17) {
              s3 = peg$c17;
              peg$currPos += 2;
            } else {
              s3 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c18); }
            }
            if (s3 === peg$FAILED) {
              if (input.substr(peg$currPos, 2) === peg$c19) {
                s3 = peg$c19;
                peg$currPos += 2;
              } else {
                s3 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c20); }
              }
              if (s3 === peg$FAILED) {
                if (input.substr(peg$currPos, 2) === peg$c21) {
                  s3 = peg$c21;
                  peg$currPos += 2;
                } else {
                  s3 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c22); }
                }
                if (s3 === peg$FAILED) {
                  if (input.substr(peg$currPos, 2) === peg$c23) {
                    s3 = peg$c23;
                    peg$currPos += 2;
                  } else {
                    s3 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c24); }
                  }
                  if (s3 === peg$FAILED) {
                    if (input.substr(peg$currPos, 2) === peg$c25) {
                      s3 = peg$c25;
                      peg$currPos += 2;
                    } else {
                      s3 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$c26); }
                    }
                  }
                }
              }
            }
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parse_();
            if (s4 !== peg$FAILED) {
              s5 = peg$parseExpression();
              if (s5 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c27(s1, s3, s5);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$parseConditionalExpression();
      }

      return s0;
    }

    function peg$parseLeftHandSideExpression() {
      var s0;

      s0 = peg$parseCallExpression();
      if (s0 === peg$FAILED) {
        s0 = peg$parseMemberExpression();
      }

      return s0;
    }

    function peg$parseConditionalExpression() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;

      s0 = peg$currPos;
      s1 = peg$parseLogicalORExpression();
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 63) {
            s3 = peg$c28;
            peg$currPos++;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c29); }
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parse_();
            if (s4 !== peg$FAILED) {
              s5 = peg$parseConditionalExpression();
              if (s5 !== peg$FAILED) {
                s6 = peg$parse_();
                if (s6 !== peg$FAILED) {
                  if (input.charCodeAt(peg$currPos) === 58) {
                    s7 = peg$c30;
                    peg$currPos++;
                  } else {
                    s7 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c31); }
                  }
                  if (s7 !== peg$FAILED) {
                    s8 = peg$parse_();
                    if (s8 !== peg$FAILED) {
                      s9 = peg$parseConditionalExpression();
                      if (s9 !== peg$FAILED) {
                        peg$savedPos = s0;
                        s1 = peg$c32(s1, s5, s9);
                        s0 = s1;
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$parseLogicalORExpression();
      }

      return s0;
    }

    function peg$parseLogicalORExpression() {
      var s0, s1, s2, s3, s4, s5, s6, s7;

      s0 = peg$currPos;
      s1 = peg$parseLogicalANDExpression();
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$currPos;
        s4 = peg$parse_();
        if (s4 !== peg$FAILED) {
          if (input.substr(peg$currPos, 2) === peg$c33) {
            s5 = peg$c33;
            peg$currPos += 2;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c34); }
          }
          if (s5 !== peg$FAILED) {
            s6 = peg$parse_();
            if (s6 !== peg$FAILED) {
              s7 = peg$parseLogicalANDExpression();
              if (s7 !== peg$FAILED) {
                peg$savedPos = s3;
                s4 = peg$c35(s1, s7);
                s3 = s4;
              } else {
                peg$currPos = s3;
                s3 = peg$FAILED;
              }
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$currPos;
          s4 = peg$parse_();
          if (s4 !== peg$FAILED) {
            if (input.substr(peg$currPos, 2) === peg$c33) {
              s5 = peg$c33;
              peg$currPos += 2;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c34); }
            }
            if (s5 !== peg$FAILED) {
              s6 = peg$parse_();
              if (s6 !== peg$FAILED) {
                s7 = peg$parseLogicalANDExpression();
                if (s7 !== peg$FAILED) {
                  peg$savedPos = s3;
                  s4 = peg$c35(s1, s7);
                  s3 = s4;
                } else {
                  peg$currPos = s3;
                  s3 = peg$FAILED;
                }
              } else {
                peg$currPos = s3;
                s3 = peg$FAILED;
              }
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c36(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseLogicalANDExpression() {
      var s0, s1, s2, s3, s4, s5, s6, s7;
